@@ -5,6 +5,7 @@
  * (trac #96) Added Fulfilled Orders page
  * (trac #92) Fixed a bug preventing you from scrolling the server IP list
  * (trac #95) Added checks for blank domain fields in the Order interface
+ * (trac #97) Domain contact box no longer shows up when there are no domains in the order
 
 7/31/2006 - jdiamond
 ====================
